This change upgrades us to sliding grid version cd75ad312f91037afc83 which fixes a layout bug when there is a tall cell followed by a wide cell and the grid is only one column.
This change also tweaks the positioning of the navigation links in the mobile version.

--- a/spiffyui-app/src/main/resources/org/spiffyui/spsample/public/spsample_mobile.css
+++ b/spiffyui-app/src/main/resources/org/spiffyui/spsample/public/spsample_mobile.css
@@ -113,7 +113,7 @@
     white-space: normal;
     text-align: center;
     height: 34px;
-    padding-top: 1em;
+    padding-top: 0.5em;
 }
 
 #mainNavContainer {
